--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body::before {
+  position: fixed;
+  top: 500px;
+  left: -100px;
+  bottom: 0;
+  content: "";
+  width: 400px;
+  height: 400px;
+  border: 2px solid rgba(255, 255, 255, 0.05);
+  z-index: 1;
+  transform: rotate(20deg);
+}
+body::after {
+  position: fixed;
+  top: -150px;
+  right: -50px;
+  bottom: 0;
+  content: "";
+  width: 400px;
+  height: 600px;
+  border: 2px solid rgba(255, 255, 255, 0.05);
+  z-index: 1;
+  transform: rotate(-30deg);
+}
